<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        tools:context=".presentation.CategoriesListFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAnimals"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@id/cardViewScience"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/animal_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/animals"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewScience"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardViewAnimals"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/science_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/science"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFeelings"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@id/cardViewReligion"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewAnimals">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/feelings_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/feelings"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewReligion"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardViewFeelings"
            app:layout_constraintTop_toBottomOf="@id/cardViewScience">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/religion_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/religion"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNature"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@id/cardViewIndustry"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewFeelings">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/nature_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/nature"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIndustry"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardViewNature"
            app:layout_constraintTop_toBottomOf="@id/cardViewReligion">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/industry_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/industry"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFood"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@id/cardViewPeople"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewNature">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/food_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/food"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPeople"
            android:layout_width="0dp"
            android:layout_height="@dimen/category_card_height"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardViewFood"
            app:layout_constraintTop_toBottomOf="@id/cardViewIndustry">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/people_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_card_bottom_bar_height"
                android:layout_gravity="bottom"
                android:background="@color/card_bottom_bar_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/people"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>